Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release

2018-03-21 MWJ  3.1.000  OTA release
                         - Tesla Model S basic vehicle support
                         - Provide an option for aggressive allocation of SPI RAM (OVMS HW 3.1)
                         - Low-level boot framework for storing data across CPU resets/sleeps
                         - Webserver: support add to home screen / web-app mode
                         - Boot/Autostart: crash detection & counting, temporary autostart inhibit
                         - Webserver: show boot status, shell command output streaming & history
                         - Network: New 'network status' command to show IP networking status
                         - Simcom: Check MUX status in NetWait state
                         - Simcom: Add a MuxStart sanity check timeout (120 seconds)
                         - Simcom: Check MUX status in NetMode state
                         - Simcom: Refactor state timeouts for greater reliability
                         - Simcom: Make 'simcom status' the default simcom command
                         - Network: Support 'config network dns' space-separated list of DNS servers
                         - Wifi: Support APCLIENT mode (for Access-Point + Client)
                         - Webserver: command streaming, auto reload, shell pageup/down
                         - Ota: If wifi network is available, try to determine available firmware version on server
                         - Webserver: added DNS config, replaced modem with network status
                         - Module: Provide a 'module factory reset' command to erase config store
                         - Webserver: warn user about unchanged password, change coupled AP password
                         - OTA: web UI
                         - Network: Try to set default interface based on WifiSTA>Modem priority